idf_component_register(SRCS "main.c"
                            "ble/ble.c"
                            "spi/spi.c"
                            "led/led_structures.c"
                            "moonboard/moonboard.c"
                            "moonboard/parser.c"
                            "moonboard/map.c"
                       INCLUDE_DIRS ".")
